--- a/addressbook-web-tests/addressbook-web-tests.csproj
+++ b/addressbook-web-tests/addressbook-web-tests.csproj
@@ -66,10 +66,12 @@
   <ItemGroup>
     <Compile Include="AccountData.cs" />
     <Compile Include="AccountDataBase.cs" />
+    <Compile Include="ContactsData.cs" />
     <Compile Include="GroupData.cs" />
     <Compile Include="UnitTest1.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="GroupCreationTest.cs" />
+    <Compile Include="AddingContactsTest.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
