--- a/addressbook-web-tests/packages.config
+++ b/addressbook-web-tests/packages.config
@@ -1,5 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Microsoft.DependencyValidation.Analyzers" version="0.11.0" targetFramework="net472" />
+  <package id="Microsoft.QualityTools.Testing.Fakes" version="16.11.230815" targetFramework="net472" />
   <package id="MSTest.TestAdapter" version="2.2.10" targetFramework="net472" />
   <package id="MSTest.TestFramework" version="2.2.10" targetFramework="net472" />
   <package id="Newtonsoft.Json" version="13.0.1" targetFramework="net472" />
