--- a/addressbook-web-tests/addressbook-web-tests.csproj
+++ b/addressbook-web-tests/addressbook-web-tests.csproj
@@ -67,10 +67,11 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="hometasks\DelittingContactsTests.cs" />
     <Compile Include="model\AccountData.cs" />
-    <Compile Include="AccountDataBase.cs" />
+    <Compile Include="hometasks\AccountDataBase.cs" />
     <Compile Include="appmanager\ApplicationManager.cs" />
-    <Compile Include="ContactsData.cs" />
+    <Compile Include="hometasks\ContactsData.cs" />
     <Compile Include="model\GroupData.cs" />
     <Compile Include="appmanager\GroupHelper.cs" />
     <Compile Include="tests\GroupModificationTests.cs" />
@@ -81,7 +82,7 @@
     <Compile Include="tests\TestBase.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="tests\GroupCreationTests.cs" />
-    <Compile Include="AddingContactsTest.cs" />
+    <Compile Include="hometasks\AddingContactsTest.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
