--- a/addressbook-web-tests/packages.config
+++ b/addressbook-web-tests/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Docker.DotNet" version="3.125.15" targetFramework="net472" />
   <package id="Microsoft.DependencyValidation.Analyzers" version="0.11.0" targetFramework="net472" />
   <package id="Microsoft.QualityTools.Testing.Fakes" version="16.11.230815" targetFramework="net472" />
   <package id="MSTest.TestAdapter" version="2.2.10" targetFramework="net472" />
@@ -10,4 +11,7 @@
   <package id="NUnitTestAdapter" version="2.3.0" targetFramework="net472" />
   <package id="Selenium.Support" version="4.19.0" targetFramework="net472" />
   <package id="Selenium.WebDriver" version="4.19.0" targetFramework="net472" />
+  <package id="System.Buffers" version="4.5.1" targetFramework="net472" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.3" targetFramework="net472" />
+  <package id="System.Threading.Tasks.Extensions" version="4.5.4" targetFramework="net472" />
 </packages>
