--- a/addressbook-web-tests/addressbook-web-tests.csproj
+++ b/addressbook-web-tests/addressbook-web-tests.csproj
@@ -67,6 +67,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="hometasks\ContactsHelper.cs" />
     <Compile Include="hometasks\DelittingContactsTests.cs" />
     <Compile Include="model\AccountData.cs" />
     <Compile Include="hometasks\AccountDataBase.cs" />
