--- a/addressbook-web-tests/addressbook-web-tests.csproj
+++ b/addressbook-web-tests/addressbook-web-tests.csproj
@@ -67,23 +67,8 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="hometasks\ContactsHelper.cs" />
-    <Compile Include="hometasks\DelittingContactsTests.cs" />
-    <Compile Include="model\AccountData.cs" />
-    <Compile Include="hometasks\AccountDataBase.cs" />
-    <Compile Include="appmanager\ApplicationManager.cs" />
-    <Compile Include="hometasks\ContactsData.cs" />
-    <Compile Include="model\GroupData.cs" />
-    <Compile Include="appmanager\GroupHelper.cs" />
-    <Compile Include="tests\GroupModificationTests.cs" />
-    <Compile Include="tests\GroupRemovalTests.cs" />
-    <Compile Include="appmanager\HelperBase.cs" />
-    <Compile Include="appmanager\LoginHelper.cs" />
-    <Compile Include="appmanager\NavigationHelper.cs" />
-    <Compile Include="tests\TestBase.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="tests\GroupCreationTests.cs" />
-    <Compile Include="hometasks\AddingContactsTest.cs" />
+    <Compile Include="UnitTest2.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
