--- a/addressbook-web-tests/addressbook-web-tests.csproj
+++ b/addressbook-web-tests/addressbook-web-tests.csproj
@@ -79,25 +79,11 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="hometasks\ContactsModificatioTest.cs" />
-    <Compile Include="hometasks\DelittingContactsTests.cs" />
-    <Compile Include="model\AccountData.cs" />
-    <Compile Include="hometasks\AccountDataBase.cs" />
-    <Compile Include="appmanager\ApplicationManager.cs" />
-    <Compile Include="hometasks\ContactsData.cs" />
-    <Compile Include="model\GroupData.cs" />
-    <Compile Include="appmanager\GroupHelper.cs" />
-    <Compile Include="tests\AuthTestBase.cs" />
-    <Compile Include="tests\GroupModificationTests.cs" />
-    <Compile Include="tests\GroupRemovalTests.cs" />
-    <Compile Include="appmanager\HelperBase.cs" />
-    <Compile Include="appmanager\LoginHelper.cs" />
-    <Compile Include="appmanager\NavigationHelper.cs" />
-    <Compile Include="tests\LoginTests.cs" />
-    <Compile Include="tests\TestBase.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="tests\GroupCreationTests.cs" />
-    <Compile Include="hometasks\AddingContactsTest.cs" />
+    <Compile Include="AddGroup.cs" />
+    <Compile Include="DeliteGroup.cs" />
+    <Compile Include="AddContact.cs" />
+    <Compile Include="DelitContact.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
