--- a/addressbook-web-tests/addressbook-web-tests.csproj
+++ b/addressbook-web-tests/addressbook-web-tests.csproj
@@ -79,15 +79,21 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="AccountData.cs" />
-    <Compile Include="ContactsData.cs" />
-    <Compile Include="GroupData.cs" />
+    <Compile Include="Model\AccountData.cs" />
+    <Compile Include="appmanager\ApplicationManager.cs" />
+    <Compile Include="appmanager\ContactsData.cs" />
+    <Compile Include="appmanager\ContactsHelper.cs" />
+    <Compile Include="Model\GroupData.cs" />
+    <Compile Include="appmanager\GroupHelper.cs" />
+    <Compile Include="appmanager\HelperBase.cs" />
+    <Compile Include="appmanager\LoginHelper.cs" />
+    <Compile Include="appmanager\NavigationHelper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="AddGroup.cs" />
-    <Compile Include="DeliteGroup.cs" />
-    <Compile Include="AddContact.cs" />
-    <Compile Include="DelitContact.cs" />
-    <Compile Include="TestBase.cs" />
+    <Compile Include="Test\AddGroup.cs" />
+    <Compile Include="Test\DeliteGroup.cs" />
+    <Compile Include="Test\AddContact.cs" />
+    <Compile Include="Test\DelitContact.cs" />
+    <Compile Include="Test\TestBase.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
