--- a/addressbook-web-tests/addressbook-web-tests.csproj
+++ b/addressbook-web-tests/addressbook-web-tests.csproj
@@ -90,10 +90,12 @@
     <Compile Include="appmanager\NavigationHelper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Test\AddGroup.cs" />
+    <Compile Include="Test\AuthTestBase.cs" />
     <Compile Include="Test\DeliteGroup.cs" />
     <Compile Include="Test\AddContact.cs" />
     <Compile Include="Test\DelitContact.cs" />
     <Compile Include="Test\GroupModificationTests.cs" />
+    <Compile Include="Test\LoginTests.cs" />
     <Compile Include="Test\TestBase.cs" />
   </ItemGroup>
   <ItemGroup>
